pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

class A extends core::Object {
  field core::int x = 0;
  field core::int y = null;
  final field core::int z = 42;
  default constructor •() → void
    : super core::Object::•()
    ;
  method test1() → dynamic {
    core::int a = this.{self::A::x};
    a = "hi" as{TypeError} core::int;
    a = 3;
    core::int b = this.{self::A::y};
    b = "hi" as{TypeError} core::int;
    b = 4;
    core::int c = this.{self::A::z};
    c = "hi" as{TypeError} core::int;
    c = 4;
  }
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:13:5: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n    a = /*error:INVALID_ASSIGNMENT*/ \"hi\";\n    ^", "pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:16:5: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n    b = /*error:INVALID_ASSIGNMENT*/ \"hi\";\n    ^", "pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:19:5: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n    c = /*error:INVALID_ASSIGNMENT*/ \"hi\";\n    ^"]/* from null */;
static method main() → dynamic {}
